--- a/FE21-HTML5-CSS--Cornelia-Bettina/newspaper.css
+++ b/FE21-HTML5-CSS--Cornelia-Bettina/newspaper.css
@@ -1,4 +1,11 @@
 p {
-    border: 1px;
+    border: 5px;
+    background-color: grey;
     text-decoration: wavy;
+    color: yellow;
+    /* this is the fallback color */
+    color: greenyellow;
+}
+h3 {
+    background-color: green;
 }
